# rapid-recorder

./: .pre-commit-config.yaml  Cargo.toml  README.md  pre-commit-tasks.bash
.github/workflows/: cy.yaml
benches/: recorder_benchmarks.rs
examples/: ideal_use_case.rs  incorrect_usage.rs  minimal.rs  performance_test.rs
src/: defaults.rs  event.rs  group.rs  group_handle.rs  latest_reading_holder.rs  lib.rs  named_usize.rs
tests/: core_functionality.rs  parallel.rs  unsafe_code.rs
